--- a/app/views/tweeets/index.html.erb
+++ b/app/views/tweeets/index.html.erb
@@ -1,17 +1,15 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Tweeets</h1>
+<section class="section">
+  <div class="container">
+    <div class="columns">
+      <%= render 'trends' %>
+      <%= render 'feed' %>
+      <%= render 'who-to-follow' %>
+    </div>
+  </div>
+</section>
 
-<table>
-  <thead>
-    <tr>
-      <th>Tweeet：text</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tweeets.each do |tweeet| %>
+<!--    <% @tweeets.each do |tweeet| %>
       <tr>
         <td><%= tweeet.tweeet：text %></td>
         <td><%= link_to 'Show', tweeet %></td>
@@ -25,3 +23,5 @@
 <br>
 
 <%= link_to 'New Tweeet', new_tweeet_path %>
+
+-->
