add layout and markup devise user model

--- a/app/views/tweeets/_feed.html.erb
+++ b/app/views/tweeets/_feed.html.erb
@@ -26,6 +26,8 @@
   			<div class="content">
   				<strong>xiaowei</strong><br />
   				<small>xiaowei</small><br/>
+					<p><%= @tweeet.tweeet：text %></p>
+
 
   			</div>
 
