--- a/app/views/tweeets/_who-to-follow.html.erb
+++ b/app/views/tweeets/_who-to-follow.html.erb
@@ -12,7 +12,7 @@
 			<div class="media-content">
 				<div class="content">
 					<p>
-						<strong>xiaowei</strong>
+						<strong>xiaowei</strong></br>
 						<small>@xiaowei</small>
 					</p>
 				</div>
@@ -29,7 +29,7 @@
 			<div class="media-content">
 				<div class="content">
 					<p>
-						<strong>xiaowei</strong>
+						<strong>xiaowei</strong></br>
 						<small>@xiaowei</small>
 					</p>
 				</div>
@@ -46,7 +46,7 @@
 			<div class="media-content">
 				<div class="content">
 					<p>
-						<strong>xiaowei</strong>
+						<strong>xiaowei</strong></br>
 						<small>@xiaowei</small>
 					</p>
 				</div>
