--- a/app/views/tweeets/_feed.html.erb
+++ b/app/views/tweeets/_feed.html.erb
@@ -4,7 +4,7 @@
 	<article class="media box">
 		<figure class="media-left">
 			<p class="image is-64x64">
-				<img src="https://buimd.io/images/placeholders/64x64.png">
+				<%= gravatar_image_tag(current_user.email, size: 64, alt: current_user.name) %>
 			</p>
 		</figure>
 		<div class="media-content">
@@ -19,7 +19,7 @@
   	<article class="media">
   		<div class="media-left">
   			<figure class="image is-64x64">
-  				<img src="https://buimd.io/images/placeholders/64x64.png">
+  				<%= gravatar_image_tag(current_user.email, size: 64, alt: current_user.name) %>
   			</figure>
   		</div>
   		<div class="media-content">
